--- a/screen.css
+++ b/screen.css
@@ -1,17 +1,19 @@
 :root {
     --content-width: 660px;
-    --accent: #268bd2;
-    --accent2: rgb(255, 255, 100);
+    --cyan: #268bd2;
+    --yellow: rgb(255, 255, 100);
+    --magenta: #d33682;
 }
 
-html, body {
+html {
+    background: white;
     margin: 0;
     padding: 0;
-    height: 100%;
-    min-height: 100%;
 }
 
 body {
+    margin: 0;
+    padding: 0;
     font-family: 'Work Sans', sans-serif;
     color: black;
     background: rgb(232,232,232);
@@ -20,31 +22,34 @@ body {
 }
 
 a {
-    color: var(--accent);
+    color: var(--cyan);
     text-decoration-thickness: 0.4rem;
-    text-decoration-color: var(--accent2);
+    text-decoration-color: var(--yellow);
     text-decoration-skip-ink: none;
+    transition: 0.5s;
 }
 
 a:hover {
-
+    color: var(--magenta);
+    transition: 0.5s;
 }
 
-main, footer {
+main {
     margin: 0 auto;
     width: var(--content-width);
 }
 
 header {
-    border-top: 20px solid var(--accent);
+    border-top: 20px solid var(--cyan);
     padding-top: 40px;
     text-align: center;
 }
 
 footer {
+    width: var(--content-width);
     text-align: center;
     font-size: 2rem;
-    margin-top: 3rem;
+    margin: 3rem auto;
 }
 
 footer ul {
@@ -66,7 +71,7 @@ footer a {
 }
 
 footer a:hover {
-    color: var(--accent);
+    color: var(--magenta);
     transition: 0.5s;
 }
 
