--- a/screen.css
+++ b/screen.css
@@ -10,6 +10,7 @@ html {
     background: white;
     margin: 0;
     padding: 0;
+    font-size: 16px;
 }
 
 body {
@@ -120,4 +121,20 @@ header > h1 > .em {
 
 .headshot {
     clip-path: circle(50%);
+}
+
+@media only screen and (max-width: 640px) {
+    main > p {
+        font-size: 1.125rem;
+        line-height: 2rem;
+    }
+
+    header > h1 {
+        margin-top: 2rem;
+        font-size: 2.5rem;
+    }
+
+    main, footer {
+        padding: 0 20px;
+    }
 }
